pkg/lang/syntax/testdata/ub/validate/invalid/stack/configuration-meta-key.ub
stack: {
  factory: {
    configurations: {
      aws { @for-each: [] }
    }
  }
  state: local {}
  encryption: noop {}
}
